<resources>
    <string name="app_name">Thapovan</string>
    <string name="facebook_app_id">1496555090532636</string>
    <string name="fb_login_protocol_scheme">fb1496555090532636</string>
    <string name="success_msg">Success</string>
    <string name="cancel_msg">cancel</string>
    <string name="login">Login</string>
    <string name="sign_in_using">Sign In Using</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="mail">Mail</string>
    <string name="age">Age</string>
    <string name="id">Id</string>
    <string name="salary">Salary</string>
    <string name="success">success</string>
    <string name="went_erong">Something went wrong</string>
    <string name="check_connection">Check Your Connection</string>
    <string name="select_date">Select Date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="dob">DOB</string>
    <string name="gender">Gender</string>
    <string name="add">add</string>
    <string name="add_user">Add User</string>
    <string name="date">Date</string>
    <string name="_name">name</string>
    <string name="_age">age</string>
    <string name="_salary">salary</string>
    <string name="valid_name">Enter a valid name</string>
    <string name="valid_age">Enter a valid age</string>
    <string name="valid_sal">Enter a valid salary</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="user_info">User Info</string>
    <string name="phone">Phone</string>
    <string name="city">City</string>
    <string name="work">Work</string>
    <string name="designation">Designation</string>
    <string name="submit">Submit</string>
    <string name="contact_detail">Contact Detail</string>
    <string name="location_detail">Location Detail</string>
    <string name="work_details">Work Details</string>
    <string name="occupation">Occupation</string>
    <string name="date_from">Date From</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="expandable_list">Expandable List</string>
    <string name="others">others</string>
    <string name="view_pager">View Pager</string>
</resources>