<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_pic"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="50dp"
        android:padding="5dp"
        android:src="@drawable/ic_camera"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/personal_detail_txtvw"
        style="@style/profile_titles"
        android:text="Personal Details"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_pic" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/personal_detail_txtvw">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tname"
                style="@style/profile_contents"
                android:layout_width="0dp"
                android:text="@string/name"
                android:textColor="@color/txt_grey"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/profile_name"
                style="@style/profile_contents"
                android:layout_width="0dp"
                app:layout_constraintBottom_toBottomOf="@id/tname"
                app:layout_constraintLeft_toRightOf="@id/tsal"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tname" />

            <TextView
                android:id="@+id/tage"
                style="@style/profile_contents"
                android:layout_width="0dp"
                android:text="@string/dob"
                android:textColor="@color/txt_grey"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="@id/tname"
                app:layout_constraintTop_toBottomOf="@id/tname" />

            <TextView
                android:id="@+id/profile_dob"
                style="@style/profile_contents"
                android:layout_width="0dp"
                app:layout_constraintBottom_toBottomOf="@id/tage"
                app:layout_constraintLeft_toRightOf="@id/tsal"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tage" />

            <TextView
                android:id="@+id/tdob"
                style="@style/profile_contents"
                android:layout_width="0dp"
                android:text="@string/mail"
                android:textColor="@color/txt_grey"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="@id/tname"
                app:layout_constraintTop_toBottomOf="@id/tage" />

            <TextView
                android:id="@+id/profile_mail"
                style="@style/profile_contents"
                android:layout_width="0dp"
                app:layout_constraintBottom_toBottomOf="@id/tdob"
                app:layout_constraintLeft_toRightOf="@id/tsal"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tdob" />

            <TextView
                android:id="@+id/tsal"
                style="@style/profile_contents"
                android:layout_width="wrap_content"
                android:text="@string/gender"
                android:textColor="@color/txt_grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="@id/tname"
                app:layout_constraintTop_toBottomOf="@id/tdob" />

            <TextView
                android:id="@+id/profile_gender"
                style="@style/profile_contents"
                android:layout_width="0dp"
                app:layout_constraintBottom_toBottomOf="@id/tsal"
                app:layout_constraintLeft_toRightOf="@id/tsal"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tsal" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_1"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/taddress"
                style="@style/profile_contents"
                android:layout_width="wrap_content"
                android:text="@string/address"
                android:textColor="@color/txt_grey"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/profile_address"
                style="@style/profile_contents"
                android:layout_width="0dp"
                android:text="No.26,1st Cross St,Madurai"
                app:layout_constraintTop_toBottomOf="@id/taddress"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
            <TextView
                android:id="@+id/tstate"
                style="@style/profile_contents"
                android:layout_width="wrap_content"
                android:text="@string/state"
                android:textColor="@color/txt_grey"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_address"/>

            <TextView
                android:id="@+id/profile_state"
                style="@style/profile_contents"
                android:layout_width="0dp"
                android:text="TamilNadu"
                app:layout_constraintTop_toBottomOf="@id/tstate"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>